
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4035: Fix CollectedGroup e2e tests for tez (daijy)

PIG-4034: Exclude TestTezAutoParallelism when -Dhadoopversion=20 (cheolsoo)

PIG-4033: Fix MergeSparseJoin e2e tests on tez (daijy)

PIG-3478: Make StreamingUDF work for Hadoop 2 (lbendig via daijy)

PIG-4032: BloomFilter fails with s3 path in Hadoop 2.4 (cheolsoo)

PIG-4018: Schema validation fails with UNION ONSCHEMA (daijy)

PIG-4022: Fix tez e2e test SkewedJoin_6 (daijy)

PIG-4001: POPartialAgg aggregates too aggressively when multiple values aggregated (tmwoodruff via cheolsoo)

PIG-4027: Always check for latest Tez snapshot dependencies (lbendig via cheolsoo)

PIG-4020: Fix tez e2e tests MapPartialAgg_[2-4], StreamingPerformance_[6-7] (daijy)

PIG-4019: Compilation broken after TEZ-1169 (daijy)

PIG-4014: Fix Rank e2e test failures on tez (daijy)

PIG-4013: Order by multiple column fail on Tez (daijy)

PIG-3983: TestGrunt.testKeepGoigFailed fail on tez mode (daijy)

PIG-3959: Skewed join followed by replicated join fails in Tez (cheolsoo)

PIG-3995: Tez unit tests shouldn't run when -Dhadoopversion=20 (cheolsoo)

PIG-3986: PigSplit to support multiple split class (tongjie via cheolsoo)

PIG-3988: PigStorage: CommandLineParser is not thread safe (tmwoodruff via cheolsoo)

PIG-2409: Pig show wrong tracking URL for hadoop 2 (lbendig via rohini)

PIG-3978: Container reuse does not across PigServer (daijy)

PIG-3974: E2E test data generation fails in cluster mode (lbendig via cheolsoo)

PIG-3969: Javascript UDF fails if no output schema is defined (lbendig via cheolsoo)
