@@ -454,6 +454,7 @@
 # first one whose supports() method returns true will be used.
 #
 # pig.stats.output.size.reader=<fully qualified class name of a PigStatsOutputSizeReader implementation>
+# pig.stats.output.size.reader.unsupported=<comma separated list of StoreFuncs that are not supported by this reader>
 
 #
 # Override hadoop configs programatically
