@@ -43,6 +43,18 @@ public class FileBasedOutputSizeReader implements PigStatsOutputSizeReader {
      */
     @Override
     public boolean supports(POStore sto, Configuration conf) {
+        String storeFuncName = sto.getStoreFunc().getClass().getCanonicalName();
+        // Some store functions do not support file-based output reader (e.g.
+        // HCatStorer), so they should be excluded.
+        String unsupported = conf.get(
+                PigStatsOutputSizeReader.OUTPUT_SIZE_READER_UNSUPPORTED);
+        if (unsupported != null) {
+            for (String s : unsupported.split(",")) {
+                if (s.equalsIgnoreCase(storeFuncName)) {
+                    return false;
+                }
+            }
+        }
         return UriUtil.isHDFSFileOrLocalOrS3N(getLocationUri(sto), conf);
     }
 
@@ -54,8 +66,8 @@ public class FileBasedOutputSizeReader implements PigStatsOutputSizeReader {
     @Override
     public long getOutputSize(POStore sto, Configuration conf) throws IOException {
         if (!supports(sto, conf)) {
-            log.warn("'" + sto.getStoreFunc().getClass().getName()
-                    + "' is not supported by " + getClass().getName());
+            log.warn("'" + sto.getStoreFunc().getClass().getCanonicalName()
+                    + "' is not supported by " + getClass().getCanonicalName());
             return -1;
         }
 
