@@ -55,3 +55,6 @@ pig.disable.counter=false
 pig.sql.type=hcat
 
 pig.output.committer.recovery.support=false
+
+pig.stats.output.size.reader=org.apache.pig.backend.hadoop.executionengine.mapReduceLayer.FileBasedOutputSizeReader
+pig.stats.output.size.reader.unsupported=org.apache.hcatalog.pig.HCatStorer,org.apache.hive.hcatalog.pig.HCatStorer
