@@ -40,6 +40,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-4003: Error is thrown by JobStats.getOutputSize() when storing to a Hive table (cheolsoo)
+
 PIG-4035: Fix CollectedGroup e2e tests for tez (daijy)
 
 PIG-4034: Exclude TestTezAutoParallelism when -Dhadoopversion=20 (cheolsoo)
